# crossing-minimal_Point-Set_Embedding

./: CMakeLists.txt  Geometry.hpp  Graph.hpp  JSONParser.cpp  JSONParser.hpp  Makefile  Node.hpp  README.md  RemoveColinearity.cpp  con_main.cpp  graphGrowing.hpp  light_crossmin.hpp  main.cpp  matching.hpp  move-crossmin.cpp  orig-crossmin.cpp  plot.ipynb  pointSetCrossMin  rtree.h  switch-crossmin.hpp  tutorial.cpp
final_results/: con12_76307754.json  con15_75228109.json  con1_11.json  con2_0.json  con3_man.json  con4_225.json  con5_4411.json  con6_41.json  con7_8624.json  con8_143547060.json  con9_325704.json
graphs/: g1.json  g10.json  g2.json  g3.json  g4.json  g5.json  g6.json  g7.json  g8.json  g9.json
old_main_functions/: main.cpp  old_con_main.cpp
results/: clustered_graph.gml  g1_35.json  g1_42.json  g2_59.json  g2_79.json  g3_115.json  g3_139.json  g4_119.json  g4_26.json
